--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,3 @@
 <img src='http://bit.ly/1eze8aE' style='border: dashed red;'>
 
-<h1>My name is <%=['Amigo','Oscar','Viking'].sample %></h1>
+<h1>My name is <%= @random%></h1>
